--- a/MainPage/MainL/index.html
+++ b/MainPage/MainL/index.html
@@ -32,11 +32,15 @@
       <div class="shadow-title parallax-top-shadow">DINESH G</div>
       <div
         class="section-parallax parallax-00"
-        style="background-image: url('http://www.ivang-design.com/svg-load/parallax/parallax-0.png');"
+        style="
+          background-image: url('http://www.ivang-design.com/svg-load/parallax/parallax-0.png');
+        "
       ></div>
       <div
         class="section-parallax parallax-01"
-        style="background-image: url('http://www.ivang-design.com/svg-load/parallax/parallax-01.png');"
+        style="
+          background-image: url('http://www.ivang-design.com/svg-load/parallax/parallax-01.png');
+        "
       ></div>
 
       <div class="section full-height">
@@ -115,7 +119,7 @@
             <div class="col-md-7 text-center">
               <a href="BlogL/index.html" target="_blank">
                 <div class="project-link-wrap">
-                  <h1>New Blog Every Uncertain time👑</h1>
+                  <h1>New Blog Every Uncertain time ->👑</h1>
                   <h6>Find out more👆🏻</h6>
                 </div>
               </a>
@@ -146,12 +150,12 @@
       ></a>
 
       <a
-        href="ProtfBuddy/ind.html"
+        href="ProtfBuddy/index.html"
         class="link-to-portfolio1 hover-target"
         target="”_blank”"
       ></a>
       <a
-        href="ProtfBuddy/ind.html"
+        href="ProtfBuddy/index.html"
         class="link-to-portfolio2 hover-target"
         target="”_blank”"
       ></a>
